# gajanLocal

./: README
KinectKUKA/: .cproject  .project  .pydevproject  CMakeLists.txt  cmake_install.cmake  mainpage.dox  manifest.xml
KinectKUKA/src/: KinectKUKA.cpp
handEyeCalibration/: .cproject  .project  .pydevproject  CMakeLists.txt  cmake_install.cmake  manifest.xml
handEyeCalibration/data/: data01.m
handEyeCalibration/launch/: .tb_history  FRIServer.launch  FRIServer.xml  camera.launch  handEyeCalibration.launch
handEyeCalibration/matlab/: dataset10.m  dataset20.m  dataset_10.m  dataset_10_2.m  dataset_10_3.m  dataset_10_4.m  debugSimpleSolution.m  generateData.m  handEyeCalibration.m  leastSquares.m  lsq.m
handEyeCalibration/src/: handEyeCalibration.cpp  handEyeCalibration.hpp  quaternions.cpp  quaternions.hpp
matlab/DPOC_MountainCar/: J.mat  dynamics.m  dynamicsD.m  eventTrigger.m  f.m  gc.m  linearProgramming.m  main.m  policyIteration.m  transMatrix.m  valueIteration.m
matlab/tex/: ETHIDSCprogramming_dpoc.cls  ETHIMRTlec_dpoc.cls  ProgrEx2.tex
re_BNLabelMe/: CMakeLists.txt  cmake_install.cmake  mainpage.dox  manifest.xml
re_BNLabelMe/msg/: orderedList.msg  unorderedListwithEvidence.msg
re_BNLabelMe/nodes/: dummyOJ.py  reorderingNode.py
re_BNLabelMe/scripts/: Indoor85.xml  labelMeParser.py
re_BNLabelMe/src/: DummyOJ.cpp
re_NodeSort/: CMakeLists.txt  mainpage.dox  manifest.xml
re_NodeSort/src/: NodeSort.java
re_articulationOROCOS_coupling/: .cproject  .project  .pydevproject  .tb_history  CMakeLists.txt  cmake_install.cmake  mainpage.dox  manifest.xml  run.sh  start.launch
re_articulationOROCOS_coupling/deploy/: .tb_history  FRIServerCommandMode1_CartesianGeneratorPos_Connector.xml
re_articulationOROCOS_coupling/src/: Connector.cpp  Connector.hpp  Coupling.cpp  Coupling.hpp
re_articulationViz/: .cproject  .project  .pydevproject  CMakeLists.txt  cmake_install.cmake  mainpage.dox  manifest.xml
re_articulationViz/src/: viz.cpp
re_kinect_object_detector/: .cproject  .project  .pydevproject  CMakeLists.txt  cmake_install.cmake  manifest.xml
re_kinect_object_detector/msg/: DetectionResult.msg  OrderedList.msg
re_kinect_object_detector/src/: recognitionmodel.cpp  slam_main.cpp
roombaEarth/: README  mainpage.dox  manifest.xml  roomba.launch
roombaEarth/nodes/: cloudBridge.py  cloundBridge.py  fakePublisher.py  log.txt  log2.txt  log_3rounds.txt  mreceiver.py  odom.m  old_log.txt  receiver.py  roombaCommander.py  roomba_tf_broadcastor.py  sender.py
sba/: CMakeLists.txt  CMakeLists.txt~
sba/src/: node.cpp
simplePendulum/: .cproject  .project  .pydevproject  CMakeLists.txt  NOTES.txt  cmake_install.cmake  handEyeCalibrationResults.txt  manifest.xml
simplePendulum/deploy/: .tb_history  PendulumReal_cartPosInput.xml  README  TrajectoryGeneratorReal_cartPosInput.xml  TrajectoryGeneratorSim_cartPosInput.xml  graphics.m  harryplotter.m  matlabDiff.m  stateLog.txt  stateLog01.txt  timeLog.txt
simplePendulum/matlab/: lqr.m  main.m  main.m~  model.mdl  pendDynamics.m  (+1 more)
trajectory_generators/: .cproject  .project  CMakeCache.txt  CMakeLists.txt  Makefile  cmake_install.cmake  manifest.xml
wifiBasedLocalization/: mainpage.dox  manifest.xml
(+37 files in other folders)
